# c1-univ3-liquidity-risk

./: ETHUSDC_0p05_mainnet.meta.json  ETHUSDC_0p05_mainnet.ticks.parquet  README.md  pyproject.toml  requirements.txt
data/processed/: ETHUSDC_0p05_mainnet.meta.json  slippage_sell_token0.parquet  slippage_sell_token1.parquet
scripts/: 00_fetch_snapshot_ethusdc_mainnet.py
src/riskengine/: __init__.py  config.py  univ3_depth.py  univ3_execution.py  univ3_math.py  univ3_snapshot.py  univ3_tail.py  utils_io.py  utils_plot.py
src/riskengine/scripts/: fetch_snapshot_ethusdc_mainnet.py
tables/: 02_out_of_band_probabilities.csv  02_slippage_curve_usdc_to_weth.csv  02_slippage_curve_weth_to_usdc.csv
